--- a/FinApp_v1.ui
+++ b/FinApp_v1.ui
@@ -277,14 +277,73 @@
      <attribute name="title">
       <string>Show Expenses</string>
      </attribute>
-     <widget class="QTableWidget" name="tableWidget">
+     <widget class="QTableWidget" name="expensesTableWidget">
       <property name="geometry">
        <rect>
         <x>130</x>
-        <y>70</y>
+        <y>130</y>
         <width>921</width>
         <height>551</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QDateEdit" name="startDateEdit">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>20</y>
+        <width>110</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QDateEdit" name="endDateEdit">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>60</y>
+        <width>110</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="startDateLabel">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>20</y>
+        <width>71</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Start date</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="endDateLabel">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>60</y>
+        <width>55</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>End date</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="expensesFilterButton">
+      <property name="geometry">
+       <rect>
+        <x>650</x>
+        <y>20</y>
+        <width>93</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Filter</string>
       </property>
      </widget>
     </widget>
